update dark mode - fix 'flash' bug

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -80,6 +80,8 @@ body {
   align-items: center;
   align-content: center;
   overflow: scroll;
+  visibility: hidden;
+  opacity: 0;
 }
 
 main {
